Prevent nested elements from triggering row click

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <td>Data B</td>
         <td>Data C</td>
         <td>Data D</td>
-        <td>Data E</td>
+        <td class="disable-row-click"><button>Click me!!!</button></td>
       </tr>
       <tr data-href="http://www.facebook.com">
         <td>Data A</td>
