--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
         <td>Data A</td>
         <td>Data B</td>
         <td>Data C</td>
-        <td><a href="http://www.web.de">WEB<a/></td>
+        <td><a href="https://news.ycombinator.com/news">HN<a/></td>
         <td>Data E</td>
       </tr>
-      <tr data-href="http://www.web.de" data-event="eventA" data-remote="false">
-        <td>Data A</td>
+      <tr data-href="https://news.ycombinator.com/news" data-event="eventA" data-remote="false">
+        <td class="disable-row-click">Data A</td>
         <td>Data B</td>
         <td>Data C</td>
         <td>Data D</td>
-        <td class="disable-row-click"><button>Click me!!!</button></td>
+        <td><button>Click me!!!</button></td>
       </tr>
-      <tr data-href="http://www.facebook.com">
+      <tr data-href="http://api.jquery.com">
         <td>Data A</td>
         <td>Data B</td>
         <td>Data C</td>
