--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </tbody>
   </table>
   <script src="js/jquery.min.js"></script>
-  <script src="js/clickable-tr.js"></script>
+  <script src="js/jquery-clickable-tr.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
