Add checkbox click row

--- a/index.html
+++ b/index.html
@@ -34,18 +34,25 @@
         <td>Data E</td>
       </tr>
       <tr data-href="https://news.ycombinator.com/news" data-event="eventA" data-remote="false">
-        <td class="disable-row-click">Data A</td>
+        <td class="disable-row-click">Disabled td</td>
         <td>Data B</td>
         <td>Data C</td>
         <td>Data D</td>
         <td><button>Click me!!!</button></td>
       </tr>
-      <tr data-href="http://api.jquery.com">
-        <td>Data A</td>
+      <tr>
+        <td><input type="checkbox" class="enable-row-click"></td>
         <td>Data B</td>
         <td>Data C</td>
         <td>Data D</td>
-        <td>Data E</td>
+        <td class="disable-row-click"><input type="checkbox"></td>
+      </tr>
+      <tr>
+        <td><input type="checkbox" class="enable-row-click"></td>
+        <td>Data B</td>
+        <td>Data C</td>
+        <td>Data D</td>
+        <td class="disable-row-click"><input type="checkbox"></td>
       </tr>
     </tbody>
   </table>
